# perfscope

./: .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  bandit-report.json  pyproject.toml  requirements.txt  safety-report.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/: demo.py
src/perfscope/: __init__.py  config.py  profiler.py
src/pycallmeter/: __init__.py  config.py  profiler.py
tests/: test_profiler.py  test_profiler_advanced.py
